fixed overflow issues

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 html {
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 
 body {
@@ -13,14 +14,17 @@ body {
   font-weight: Medium;
 }
 
-.main {
-  width: 100%;
-  height: 1080px;
+.container {
+  width: 70%;
+  height: 100%;
+  top: 0px;
+  left: 30%;
+  background: var(--bg-color);
+  position: absolute;
 }
 
 .event-title {
   width: 100%;
-  top: 1%;
   
   position: absolute;
   font-family: Poppins;
@@ -28,14 +32,6 @@ body {
   font-size: 56px;
   opacity: 1;
   text-align: center;
-}
-
-.container {
-  width: 70%;
-  height: 100%;
-  left: 30%;
-  background: var(--bg-color);
-  position: absolute;
 }
 
 .cal {
@@ -95,38 +91,6 @@ body {
   top: 315px;
   left: 384px;
   overflow: hidden;
-}
-
-.v21_111 {
-  width: 100%;
-  height: 898px;
-  opacity: 1;
-  position: absolute;
-  top: 0px;
-  left: 46px;
-  overflow: hidden;
-}
-
-.v21_112 {
-  width: 845px;
-  height: 808px;
-  margin: 169px;
-  opacity: 1;
-  position: absolute;
-  top: 88px;
-  left: 169px;
-  overflow: hidden;
-}
-
-.v21_119 {
-  width: 100%;
-  height: 898px;
-  background: url("../images/v21_119.png");
-  opacity: 1;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  border: 4px solid rgba(3,25,38,1);
 }
 
 .times {
@@ -280,36 +244,24 @@ body {
 
 aside {
   width: 30%;
-  height: 1120px;
-  opacity: 1;
-  position: absolute;
-  top: 4px;
-  left: 0px;
-  overflow: hidden;
+  height: 100%;
+  text-align: center;
 }
 
 .meetings-container {
+  background: rgba(255,255,255,1);
+}
+
+.meeting-button {
   width: 100%;
-  height: 687px;
-  background: rgba(255,255,255,1);
-  padding: 8px 0px;
-  position: absolute;
-  bottom: 5%;
-  overflow: hidden;
+  background: white;
+  padding: 12px 10%;
+  margin: 24px 0px;
+  text-align: left;
+  border-color: black;
 }
-.v21_135 {
-  width: 466px;
-  height: 105px;
-  background: rgba(255,255,255,1);
-  padding: 14px 32px;
-  margin: 24px;
-  opacity: 1;
-  position: absolute;
-  top: 8px;
-  left: 0px;
-  overflow: hidden;
-}
-.v21_136 {
+
+.meeting-icon {
   width: 36px;
   height: 36px;
   background: url("../images/v21_136.png");
@@ -319,144 +271,14 @@ aside {
   left: 32px;
   border-radius: 50%;
 }
-.v21_137 {
-  width: 267px;
-  color: rgba(0,0,0,0.8700000047683716);
-  position: absolute;
-  top: 38px;
-  left: 92px;
-  font-family: Poppins;
-  font-weight: SemiBold;
-  font-size: 24px;
-  opacity: 1;
-  text-align: left;
-}
-.v21_139 {
-  width: 466px;
-  height: 1px;
-  background: rgba(224,224,224,1);
-  opacity: 1;
-  position: absolute;
-  top: 113px;
-  left: 0px;
-  overflow: hidden;
-}
-.v21_140 {
-  width: 466px;
-  height: 104px;
-  background: rgba(0,0,0,0);
-  padding: 14px 32px;
-  margin: 24px;
-  opacity: 1;
-  position: absolute;
-  top: 114px;
-  left: 0px;
-  overflow: hidden;
-}
-.v21_141 {
-  width: 36px;
-  height: 36px;
-  background: url("../images/v21_141.png");
-  opacity: 1;
-  position: absolute;
-  top: 34px;
-  left: 32px;
-  border-radius: 50%;
-}
-.v21_142 {
-  width: 267px;
-  color: rgba(0,0,0,0.8700000047683716);
-  position: absolute;
-  top: 38px;
-  left: 92px;
-  font-family: Poppins;
-  font-weight: SemiBold;
-  font-size: 24px;
-  opacity: 1;
-  text-align: left;
-}
-.v21_144 {
-  width: 466px;
-  height: 1px;
-  background: rgba(224,224,224,1);
-  opacity: 1;
-  position: absolute;
-  top: 218px;
-  left: 0px;
-  overflow: hidden;
-}
-.v21_145 {
-  width: 466px;
-  height: 105px;
-  background: rgba(124,226,255,0.46000000834465027);
-  padding: 14px 32px;
-  margin: 24px;
-  opacity: 1;
-  position: absolute;
-  top: 219px;
-  left: 0px;
-  overflow: hidden;
-}
-.v21_146 {
-  width: 36px;
-  height: 36px;
-  background: rgba(124,226,255,1);
-  opacity: 1;
-  position: absolute;
-  top: 34px;
-  left: 32px;
-  border-radius: 50%;
-}
-.v21_147 {
-  width: 267px;
-  color: rgba(0,0,0,1);
-  position: absolute;
-  top: 38px;
-  left: 92px;
-  font-family: Poppins;
-  font-weight: SemiBold;
-  font-size: 24px;
-  opacity: 1;
-  text-align: left;
-}
-.v21_149 {
-  width: 466px;
-  height: 1px;
-  background: rgba(224,224,224,1);
-  opacity: 1;
-  position: absolute;
-  top: 324px;
-  left: 0px;
-  overflow: hidden;
-}
-.v21_150 {
-  width: 466px;
-  height: 104px;
-  background: rgba(0,0,0,0);
-  padding: 14px 28px;
-  margin: 16px;
-  opacity: 1;
-  position: absolute;
-  top: 325px;
-  left: 0px;
-  overflow: hidden;
-}
-.name {
-  color: #fff;
-}
-.v21_152 {
-  width: 355px;
-  color: rgba(0,0,0,0.44999998807907104);
-  position: absolute;
-  top: 38px;
-  left: 92px;
-  font-family: Poppins;
-  font-weight: SemiBold;
-  font-size: 24px;
-  opacity: 1;
-  text-align: left;
-}
 
+.meeting-label {
+  color: rgba(0,0,0,0.8700000047683716);
+  font-family: Poppins;
+  font-weight: SemiBold;
+  font-size: 24px;
+  opacity: 1;
+}
 
 .pfp {
   width: 150px;
@@ -471,50 +293,18 @@ aside {
 
 .name-tag {
   width: 100%;
-  top: 15%;
   color: black;
-  position: absolute;
+  position: relative;
   font-size: 56px;
   text-align: center;
-}
-
-.v21_155 {
-  width: 68px;
-  height: 67px;
-  background: url("../images/v21_155.png");
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  opacity: 1;
-  position: absolute;
-  top: 341px;
-  left: 310px;
-  overflow: hidden;
-}
-.v21_156 {
-  width: 68px;
-  height: 67px;
-  background: rgba(255,255,255,1);
-  opacity: 1;
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  border: 5px solid rgba(3,25,38,1);
-  border-top-left-radius: 19px;
-  border-top-right-radius: 19px;
-  border-bottom-left-radius: 19px;
-  border-bottom-right-radius: 19px;
-  overflow: hidden;
 }
 
 .avail_button {
   width: 208px;
   height: 67px;
   background: rgba(217,217,217,1);
-  position: absolute;
-
-  top: 25%;
   left: 17%;
+  margin: 5%;
   border-radius: 13px;
   overflow: hidden;
   text-align: center;
@@ -629,77 +419,6 @@ aside {
   font-family: Poppins;
   font-weight: Medium;
   font-size: 22px;
-  opacity: 1;
-  text-align: center;
-}
-
-.v21_189 {
-  width: 140px;
-  height: 68px;
-  background: rgba(217,217,217,1);
-  opacity: 1;
-  position: absolute;
-  top: 2px;
-  left: 733px;
-  border-top-left-radius: 13px;
-  border-top-right-radius: 13px;
-  border-bottom-left-radius: 13px;
-  border-bottom-right-radius: 13px;
-  overflow: hidden;
-}
-.v21_190 {
-  width: 111px;
-  color: rgba(0,0,0,1);
-  position: absolute;
-  top: 0px;
-  left: 753px;
-  font-family: Poppins;
-  font-weight: Medium;
-  font-size: 25px;
-  opacity: 1;
-  text-align: left;
-}
-.v50_523 {
-  width: 37px;
-  height: 37px;
-  background: rgba(51,148,55,1);
-  opacity: 1;
-  position: absolute;
-  top: 6px;
-  left: 5px;
-  border-radius: 50%;
-}
-.v50_524 {
-  width: 12px;
-  color: rgba(255,255,255,1);
-  position: absolute;
-  top: 14px;
-  left: 7px;
-  font-family: Roboto;
-  font-weight: Medium;
-  font-size: 24px;
-  opacity: 1;
-  text-align: center;
-}
-.v50_526 {
-  width: 37px;
-  height: 37px;
-  background: rgba(51,148,55,1);
-  opacity: 1;
-  position: absolute;
-  top: 6px;
-  left: 5px;
-  border-radius: 50%;
-}
-.v50_527 {
-  width: 12px;
-  color: rgba(255,255,255,1);
-  position: absolute;
-  top: 14px;
-  left: 7px;
-  font-family: Roboto;
-  font-weight: Medium;
-  font-size: 24px;
   opacity: 1;
   text-align: center;
 }
